--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 # Python CircleCI 2.0 configuration file
-version: 2
-
 orbs:
-  heroku: circleci/heroku@0.0.10. # Invoke the Heroku orb
+  heroku: circleci/heroku@1.2.2 # Invoke the Heroku orb
+
+version: 2.1
 
 jobs:
   build:
@@ -32,7 +32,7 @@ workflows:
   build-deploy:
     jobs:
       - build
-      - heroku/deploy-via-git: # Use the pre-configured job
+      - heroku/deploy-via-git:
           requires:
             - build
           filters:
